--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 redirect_from: "/user/login"
 redirect_from: "/user/password"
 redirect_from: "/login"
+redirect_from: "/signup"
 ---
 
 <!doctype html>
