--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 ---
 redirect_from:
   - /user
+  - /user/login
+  - /signup
 ---
 
 <!doctype html>
@@ -67,7 +69,7 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","pathPrefix":"","ajaxPageState":
       
   
   <div class="pane-content">
-    <ul class="nice-menu nice-menu-right nice-menu-user-menu" id="nice-menu-3"><li class="menu-3255 menuparent  menu-path-node-610 first odd "><a href="/ulysses/3" title="">2Read Now</a><ul><li class="menu-3478 menu-path-proteus-comic first odd "><a href="/proteus-comic" title="">Proteus Comic</a></li>
+    <ul class="nice-menu nice-menu-right nice-menu-user-menu" id="nice-menu-3"><li class="menu-3255 menuparent  menu-path-node-610 first odd "><a href="/ulysses/3" title="">3Read Now</a><ul><li class="menu-3478 menu-path-proteus-comic first odd "><a href="/proteus-comic" title="">Proteus Comic</a></li>
 <li class="menu-3223 menu-path-node-305  even "><a href="/content/terms-use" title="">Terms of Use</a></li>
 <li class="menu-1247 menu-path-node-293  odd "><a href="/content/user-rights" title="">Community Policies</a></li>
 <li class="menu-1233 menu-path-node-280  even "><a href="/content/accessibility-inclusion">Accessibility</a></li>
