--- a/node/285.html
+++ b/node/285.html
@@ -193,8 +193,8 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","pathPrefix":"","ajaxPageState":
       <div class="view-content">
         <div>
       
-  <div class="views-field views-field-name-1">        <span class="field-content"><strong>24,000+ visitors</strong> and <strong>775</strong> members who created a site account for the best reading experience. <strong>(<a href="http://www.infiniteulysses.com/signup">Sign up here</a> to receive notification when the 1.0 version of site becomes available!).</strong><br><br></span>  </div>  
-          Readers have authored <strong>1,168</strong> annotations on <em>Ulysses</em>           
+  <div class="views-field views-field-name-1">        <span class="field-content"><strong>24,000+ unique visitors</strong> and <strong>775</strong> unique site user accounts. <br><br></span></div>  
+          Readers authored <strong>1,168</strong> annotations on <em>Ulysses</em>           
   <span>        <span>and tagged those annotations with <strong>287</strong> unique terms to make them filterable by theme, reader needs, and more.</span>  </span>  </div>
     </div>
   
