--- a/content/research-statement.html
+++ b/content/research-statement.html
@@ -271,8 +271,8 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","pathPrefix":"","ajaxPageState":
       
   
   <div class="content">
-    <div class="field-body"><div class="field-items"><div class="field-item even"><h2>Beta Mode?</h2>
-<p>This site was the focus of a digital humanities literture dissertation successfully defended in Spring 2015. If you'd like to know more about the research behind this site, please read on!</p>
+    <div class="field-body"><div class="field-items"><div class="field-item even"><h2>Archived?</h2>
+<p>This site was the focus of a digital humanities literture dissertation successfully defended in Spring 2015. The site has been migrated to a non-interactive static version as of October 2017. If you'd like to know more about the research behind this site, please read on!</p>
 <h2>Research Statement</h2>
 <p>This site was part of my literature/digital humanities Ph.D. dissertation. I was interested in several related things:</p>
 <ol><li><span style="line-height: 1.538em;">How we can design humanities sites (like this digital edition) to be better at involving the public in our work?</span></li>
