--- a/all-annotations-feed.html
+++ b/all-annotations-feed.html
@@ -158,7 +158,7 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","pathPrefix":"","ajaxPageState":
         <div class="column container">
           <div class="view view-all-annotations-feed view-id-all_annotations_feed view-display-id-page view-dom-id-54e29c16cc7bb888b0ebb55b09e3e136">
             <div class="view-header">
-      <p>Below you can read through a feed of all annotations created on this site together with some related metadata. To access the RSS feed of all site annotations (including metadata not displayed in the table below), visit <a href="http://www.infiniteulysses.com/annotations.xml">www.InfiniteUlysses.com/annotations.xml</a>.</p>
+      <p>Below you can read through a feed of all annotations created on this site together with some related metadata. To access the RSS feed of all site annotations (including metadata not displayed in the table below), visit <a href="http://www.infiniteulysses.com/annotations.xml.rss">www.InfiniteUlysses.com/annotations.xml.rss</a>.</p>
 <p>Instructions for exporting the set of annotations and all related data in CSV format will appear here in the future. An explanation of licensing and options for filtering the dataset will appear here, as well as suggestions for exploring the dataset (e.g. basic visualization in Gephi).</p>
 <p>If you're a researcher (professional or otherwise) and would like to see something added to the dataset, please contact me and I'll see whether I can accommodate you.</p>
     </div>
