Fixed ribbon problem

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","pathPrefix":"","ajaxPageState":
 
 <!-- printing the beta ribbon -->
 <div class="ribbonwrapper">
-<a href="http://www.InfiniteUlysses.com/content/research-statement"><div class="ribbon-wrapper"><div class="ribbon-inner">Archived</div></div></a>
+<div class="ribbon-wrapper"><div class="ribbon-inner"><a href="http://www.InfiniteUlysses.com/content/research-statement" style="color: #FFFFFF;">Archived</a></div></div>
 </div>
 
   <div class="container">
