--- a/tour.html
+++ b/tour.html
@@ -1,6 +1,26 @@
 ---
 redirect_from:
+  - /ulysses
+  - /ulysses/3
+  - /ulysses/4
   - /ulysses/5
+  - /ulysses/6
+  - /ulysses/7
+  - /ulysses/8
+  - /ulysses/9
+  - /ulysses/10
+  - /ulysses/11
+  - /ulysses/12
+  - /ulysses/13
+  - /ulysses/14
+  - /ulysses/15
+  - /ulysses/16
+  - /ulysses/17
+  - /ulysses/18
+  - /ulysses/19
+  - /ulysses/20
+  - /ulysses/21
+  - /ulysses/22
 ---
 <!doctype html>
 <html lang="en"  dir="ltr">
