Or maybe ending / instead?

--- a/tour.html
+++ b/tour.html
@@ -3,6 +3,8 @@ redirect_from:
   - /ulysses
   - /ulysses/3.html
   - /ulysses/4.html
+  - /ulysses/3/
+  - /ulysses/4/
 ---
 <!doctype html>
 <html lang="en"  dir="ltr">
