--- a/tour.html
+++ b/tour.html
@@ -1165,7 +1165,7 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","pathPrefix":"","ajaxPageState":
   
   
       <div class="view-content">
-      *testing something*
+      This is the best representation of how the Infinite Ulysses website worked when it was open to the public. (Please note: navigating to pages of the book now redirects you to this tour instead, as moving from Drupal to a static archival site broke too much of the reading page's functionality and design.)
   <div class="skin-default">
           <div class="views-slideshow-controls-top clearfix">
         <div id="views_slideshow_slide_counter_tour-page" class="views-slideshow-slide-counter views_slideshow_slide_counter">
